# GameJam2024

./: CMakeLists.txt  README.md
include/HackathonLib/: Character.hpp  Game.hpp  PixelPerfectDetection.hpp  Textures.hpp  Type.hpp  Wall.hpp
include/HackathonLib/Objects/: Character.hpp  IObject.hpp  Token.hpp  Wall.hpp
include/HackathonLib/Runners/: GameRunner.hpp  IRunner.hpp  InstructRunner.hpp  Instructions.hpp  ScoreRunner.hpp  Scores.hpp
resources/: ski_jump_data.csv
resources/images/: ramp.pixil
src/HackathonExe/: CMakeLists.txt  main.cpp
src/HackathonLib/: CMakeLists.txt  Character.cpp  Game.cpp  PixelPerfectDetection.cpp  Wall.cpp
src/HackathonLib/Objects/: Character.cpp  Token.cpp  Wall.cpp
src/HackathonLib/Runners/: GameRunner.cpp  Instructions.cpp  Scores.cpp
